@@ -3,6 +3,8 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 - pts-core: Add system to default list of repositories
+- pts_Graph: Rendering fix for collision of result identifiers
+- deploy: JuJu update from upstream
 
 Phoronix Test Suite 6.2 Milestone 2
 2 January 2016
